--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,8 +22,7 @@ body {
   background: white;
   padding: 30px;
   font-family: sans-serif;
-  width: 90%;
-  max-width: 600px;
+  width: 80%;
   margin: 30px auto;
   border-radius: 10px; }
 
@@ -46,9 +45,38 @@ p {
 .todo-list {
   list-style: decimal;
   padding: 0 30px; }
-  .todo-list .todo-item {
-    padding: 10px 0; }
+
+.todo-list .todo-item {
+    padding: 10px 0; 
+    border-bottom: 1px solid grey;
+    border-top: 1px solid grey;
+}
     .todo-list .todo-item:hover {
       background: pink; }
+
+button {
+    padding: 10px;
+}
+
+a:hover {
+    transform: scale(1.5);
+    transition-duration: .3s;
+    transition-timing-function: ease-in-out;
+}
+
+.buttons button {
+    margin-right: 5%;
+    background: #26a69a;
+    color: #fff;
+    text-transform: uppercase;
+    border-radius: 2px;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+}
+
+.buttons button:hover {
+    transition-duration: .5s;
+    transition-timing-function: ease-in-out;
+    background: rgb(47, 183, 170);
+}
 
 /*# sourceMappingURL=main.css.map */
